<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
     tools:context=".MainActivity">


        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:padding="10dp"
            android:drawableLeft="@drawable/icbur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp">


        <TextView
        android:layout_weight="1"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textColor="@color/black"
        android:textSize="50dp"/>

        <TextView

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textColor="@color/white"
            android:textSize="50dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp">


        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            android:textColor="@color/white"
            android:textSize="55dp"/>

        <TextView

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text4"
            android:textColor="@color/black"
            android:textSize="55dp"/>


    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/chefff"
        android:backgroundTint="@color/yellow">

    </ImageView>
    <LinearLayout
        android:layout_marginTop="100dp"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dot"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/dot">
        </ImageView>
        <Button
            android:id="@+id/btn"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text5"
            android:textSize="20dp"
            android:drawableRight="@drawable/ic_nextarrow"
            android:backgroundTint="@color/black">

        </Button>



    </LinearLayout>







</LinearLayout>