<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_backarrow"
        android:text="@string/bur"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp"
        android:drawableRight="@drawable/ic_search"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop"
            android:textColor="@color/black"
            android:textSize="20dp"/>
        <TextView
            android:paddingLeft="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rat"
            android:textSize="20dp"/>
        <TextView
            android:paddingLeft="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="20dp"
            android:drawableRight="@drawable/filter"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cvbeefburgur"/>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bug1"
            android:textColor="@color/black"
            android:textSize="16dp"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pr1"
            android:textColor="@color/black"
            android:gravity="right"
            android:textSize="16dp"/>

        </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/star"
                    android:drawableRight="@drawable/clock"
                    android:text="@string/star"
                    android:gravity="center"/>
                <TextView
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/cvbaconfries"/>
            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bacon"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/baconprice"
                    android:gravity="right"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:padding="3dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/star"
                    android:text="@string/star5"
                    android:gravity="center"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/clock"
                    android:text="@string/time"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/cvbeefburgur"/>

            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bug1"
                    android:textColor="@color/black"
                    android:textSize="16dp"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pr1"
                    android:textColor="@color/black"
                    android:gravity="right"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/star"
                    android:drawableRight="@drawable/clock"
                    android:text="@string/star"
                    android:gravity="center"/>
                <TextView
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>




</LinearLayout>