<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity4">

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_backarrow"
        android:text="@string/order"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="right"
        android:layout_gravity="center"/>
        <TextView
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/dotver"
            android:drawableLeft="@drawable/smiley"/>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:src="@drawable/chipotlebeefburger" />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_weight="1.5"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bac1"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/baconprice"
                        android:textColor="@color/black"
                        android:gravity="right"/>
                </LinearLayout>
                <TextView
                    android:layout_weight=".5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/plus"
                    android:drawableLeft="@drawable/minus"
                    android:text="@string/count"
                    android:gravity="center"
                    android:layout_margin="30dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp">
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/chipotlebeefburger"
                android:layout_gravity="left"/>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_weight="1.5"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bac1"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/baconprice"
                        android:textColor="@color/black"
                        android:gravity="right"/>
                </LinearLayout>
                <TextView
                    android:layout_weight=".5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/plus"
                    android:drawableLeft="@drawable/minus"
                    android:text="@string/count"
                    android:gravity="center"
                    android:layout_margin="30dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:drawableLeft="@drawable/ic_per"
        android:text="@string/ac"
        android:drawableRight="@drawable/ic_nextarrow"
        android:backgroundTint="@color/purple_200">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

    <LinearLayout
        android:padding="10dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item"
            android:gravity="left"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/it"/>

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delivery Charge"
            android:gravity="left"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dc"/>

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tax"
            android:gravity="left"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tax"/>

    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:gravity="left"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tot"
            android:textColor="@color/black"
            android:textSize="30dp"/>

    </LinearLayout>
    </LinearLayout>
    <Button
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:text="Confirm Order"
        android:textSize="20dp"
        android:textStyle="bold"
        android:drawableRight="@drawable/ic_nextarrow"
        android:backgroundTint="@color/yellow">

    </Button>


</LinearLayout>