<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity5">
    <TextView
        android:onClick="back"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_backarrow" />
    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bacon Burgur"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:drawableRight="@drawable/icbur"
        android:drawablePadding="10dp"
        android:layout_gravity="center"/>
    <TextView
        android:lines="2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/text6"
        android:layout_gravity="center"
        android:textSize="18dp"
        android:gravity="center"
        android:padding="5dp"/>
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/chipotlebeefburger"
        android:layout_gravity="center"/>
    <TextView
        android:padding="20dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/l"
        android:drawableLeft="@drawable/s"
        android:drawableBottom="@drawable/m"
        android:layout_gravity="center"></TextView>
    <TextView
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/minus"
        android:drawableRight="@drawable/plus"
        android:text="@string/count"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18dp"/>

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout

            android:padding="15dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="price"
            android:textSize="18dp"></TextView>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price44"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        </LinearLayout>
        <Button
            android:id="@+id/cart"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="Go to Cart"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/smiley"
            android:backgroundTint="@color/yellow">

        </Button>



    </LinearLayout>



</LinearLayout>